@@ -1,5 +1,6 @@
 1.016  NOT
 
+	- Move deleted records to end of file (Alan Wehmann - RT#101666)
 	- Use 'our' instead of 'use vars'
 
 1.015  2014-08-09  Release by Christopher J. Madsen
